--- a/task_2.html
+++ b/task_2.html
@@ -6,13 +6,13 @@
 
 <form action="/action_page.php">
   <label for="name">Full Name:</label><br>
-  <input type="text" id="name" name="name" value="Enter your full name"><br><br>
+  <input type="text" id="name" name="name" placeholder="Enter your full name" required><br><br>
 
   <label for="email">Email Address:</label><br>
-  <input type="text" id="email" name="email" value="Enter your email address"><br><br>
+  <input type="email" id="email" name="email" placeholder="Enter your email address" required><br><br>
 
   <label for="age">Age:</label><br>
-  <input size=5px type="text" id="age" name="age" value=""><br><br>
+  <input type="number" size=5px  id="age" name="age" value="" min="18" max="99" required><br><br>
 
   <label>Gender:</label><br>
   <input type="radio" id="male" name="gender" value="male">
